--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "browser game mimicking the classic two-player, turn-based artillery game",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20"
   }
 }
